--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,44 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="js/jquery-2.2.3.min.js"></script>  <!--// добавил 24.11.21-->
+    <script src="src/promise/promise.js"></script>  <!--// добавил 24.11.21-->
     <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-
-<!--&lt;!&ndash;    5 LESSON-->
-<!--<hr>&ndash;&gt;-->
-<!--&lt;!&ndash;    <button>1</button>&ndash;&gt;-->
-<!--&lt;!&ndash;    <button id ="number2">2</button>&ndash;&gt;-->
-
-<!--&lt;!&ndash;    <script>&ndash;&gt;-->
-
-<!--&lt;!&ndash;      let fn = ()=> {&ndash;&gt;-->
-<!--&lt;!&ndash;        console.log('hello')&ndash;&gt;-->
-<!--&lt;!&ndash;        alert('Hello')&ndash;&gt;-->
-
-<!--&lt;!&ndash;      }&ndash;&gt;-->
-<!--&lt;!&ndash;      let focus = ()=> {&ndash;&gt;-->
-<!--&lt;!&ndash;        console.log('focus')&ndash;&gt;-->
-<!--&lt;!&ndash;      }&ndash;&gt;-->
-
-<!--&lt;!&ndash;      let btn = document.getElementById('number2')&ndash;&gt;-->
-<!--&lt;!&ndash;      btn.onclick = fn&ndash;&gt;-->
-<!--&lt;!&ndash;      btn.addEventListener("mousemove", focus)&ndash;&gt;-->
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
 
 
-    </script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+</body>
 </html>
